# glanceXags

./: .example.env  .gitignore  CLAUDE.md  docker-compose.yml
config/: glance.yml
config/themes/: README.md  heaven-blue.yml  heaven-cyan.yml  heaven-green.yml  heaven-orange.yml  heaven-pink.yml  heaven-purple.yml  heaven-red.yml  underworld-blue.yml  underworld-cyan.yml  underworld-green.yml  underworld-orange.yml  underworld-pink.yml  underworld-purple.yml  underworld-red.yml
docs/: configuration.md
internal/glance/: glance.go  widget-todoist.go  widget.go
internal/glance/static/css/: widget-todoist.css  widgets.css
internal/glance/static/js/: page.js  todoist.js
internal/glance/templates/: todoist.html
internal/glance/todoist/: client.go
specs/: todoist-integration.md  todoist-missing-features-bug-fix.md  todoist-widget-styling-improvements.md
unofficial-apis/Youtube-data-api/: Dockerfile  README.md  data_api.py  pyproject.toml
