[project]
name = "youtube-data-api"
version = "2.0.0"
description = "YouTube Data Extractor API - Extract transcripts, metadata, and comments from YouTube videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2023.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["data_api.py"]

[tool.uv]
dev-dependencies = []
